force-app/main/default/objects/Lead/fields/EDU_Grade__c.field-meta.xml
<CustomField>
    <fullName>EDU_Grade__c</fullName>
    <description>Grade(s) that will be participating</description>
    <label>Grade(s)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>