force-app/main/default/objects/Lead/fields/EDU_Number_of_Students__c.field-meta.xml
<CustomField>
    <fullName>EDU_Number_of_Students__c</fullName>
    <description>Number of students attending</description>
    <label>Number of Students</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>