force-app/main/default/objects/Lead/fields/EDU_Program_Detail__c.field-meta.xml
<CustomField>
    <fullName>EDU_Program_Detail__c</fullName>
    <description>EDU Program Details</description>
    <label>Program Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>