force-app/main/default/objects/Lead/fields/EDU_Program_Interest__c.field-meta.xml
<CustomField>
    <fullName>EDU_Program_Interest__c</fullName>
    <label>Program Interest</label>
    <type>TextArea</type>
</CustomField>