force-app/main/default/objects/Lead/fields/EDU_School_District__c.field-meta.xml
<CustomField>
    <fullName>EDU_School_District__c</fullName>
    <label>School District</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Alpine School District</fullName>
            </value>
            <value>
                <fullName>Beaver School District</fullName>
            </value>
            <value>
                <fullName>Box Elder School District</fullName>
            </value>
            <value>
                <fullName>Cache County School District</fullName>
            </value>
            <value>
                <fullName>Canyons School District</fullName>
            </value>
            <value>
                <fullName>Carbon School District</fullName>
            </value>
            <value>
                <fullName>Charter</fullName>
            </value>
            <value>
                <fullName>Daggett School District</fullName>
            </value>
            <value>
                <fullName>Davis School District</fullName>
            </value>
            <value>
                <fullName>Duchesne County School District</fullName>
            </value>
            <value>
                <fullName>Emery County School District</fullName>
            </value>
            <value>
                <fullName>Garfield County School District</fullName>
            </value>
            <value>
                <fullName>Grand County School District</fullName>
            </value>
            <value>
                <fullName>Granite School District</fullName>
            </value>
            <value>
                <fullName>Home school</fullName>
            </value>
            <value>
                <fullName>Iron County School District</fullName>
            </value>
            <value>
                <fullName>Jordan School District</fullName>
            </value>
            <value>
                <fullName>Juab School District</fullName>
            </value>
            <value>
                <fullName>Kane County School District</fullName>
            </value>
            <value>
                <fullName>Logan City School District</fullName>
            </value>
            <value>
                <fullName>Millard School District</fullName>
            </value>
            <value>
                <fullName>Morgan School District</fullName>
            </value>
            <value>
                <fullName>Murray City School District</fullName>
            </value>
            <value>
                <fullName>Nebo School District</fullName>
            </value>
            <value>
                <fullName>North Sanpete School District</fullName>
            </value>
            <value>
                <fullName>North Summit School District</fullName>
            </value>
            <value>
                <fullName>Ogden School District</fullName>
            </value>
            <value>
                <fullName>Park City School District</fullName>
            </value>
            <value>
                <fullName>Piute County School District</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>