force-app/main/default/objects/Lead/fields/EDU_School_Name__c.field-meta.xml
<CustomField>
    <fullName>EDU_School_Name__c</fullName>
    <label>School Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>