force-app/main/default/objects/Lead/fields/EDU_Subject__c.field-meta.xml
<CustomField>
    <fullName>EDU_Subject__c</fullName>
    <description>The subject that the teacher teaches or this event will be used for.</description>
    <label>Subject</label>
    <length>120</length>
    <type>Text</type>
</CustomField>