force-app/main/default/objects/Lead/fields/Process_Builder_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Process_Builder_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used by the Admin for Process Trigger</inlineHelpText>
    <label>Process Builder Trigger (Admin Use)</label>
    <type>Checkbox</type>
</CustomField>