force-app/main/default/objects/Lead/fields/Willing_to_take_survey__c.field-meta.xml
<CustomField>
    <fullName>Willing_to_take_survey__c</fullName>
    <description>Willing to take a survey (used a lot with EDU)</description>
    <label>Willing to take survey</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>